added rest classes

--- a/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
+++ b/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
@@ -45,11 +45,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="530ReadDBAPICalls.cs" />
+    <Compile Include="530ReadRestAPICalls.cs" />
     <Compile Include="530WriteDBAPICalls.cs" />
     <Compile Include="ConnectionBroker.cs" />
     <Compile Include="DBAPICalls.cs" />
+    <Compile Include="JsonObjects\AuthResponse.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
