--- a/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
+++ b/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
@@ -44,16 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="530ReadDBAPICalls.cs" />
-    <Compile Include="530ReadRestAPICalls.cs" />
-    <Compile Include="530WriteDBAPICalls.cs" />
+    <Compile Include="IQBotCalls\DB\530ReadDBAPICalls.cs" />
+    <Compile Include="IQBotCalls\DB\600ReadDBAPICalls.cs" />
+    <Compile Include="IQBotCalls\Rest\530ReadRestAPICalls.cs" />
+    <Compile Include="IQBotCalls\DB\530WriteDBAPICalls.cs" />
     <Compile Include="CRCalls\CRRestUtils.cs" />
     <Compile Include="CRCalls\Resps\GenericJSONResponses.cs" />
     <Compile Include="CRCalls\Rest\v11RestAPICalls.cs" />
-    <Compile Include="CRConnectionBroker.cs" />
-    <Compile Include="IQBotConnectionBroker.cs" />
-    <Compile Include="DBAPICalls.cs" />
+    <Compile Include="CRCalls\CRConnectionBroker.cs" />
+    <Compile Include="IQBotCalls\IQBotConnectionBroker.cs" />
+    <Compile Include="IQBotCalls\DB\DBAPICalls.cs" />
+    <Compile Include="IQBotCalls\Rest\600ReadRestAPICalls.cs" />
     <Compile Include="JsonObjects\AuthResponse.cs" />
+    <Compile Include="JsonObjects\LearningInstancesList.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestUtils.cs" />
