--- a/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
+++ b/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IQBotCalls\Rest\600ReadRestAPICalls.cs" />
     <Compile Include="JsonObjects\AuthResponse.cs" />
     <Compile Include="JsonObjects\GroupsList.cs" />
+    <Compile Include="JsonObjects\LearningInstanceDetails.cs" />
     <Compile Include="JsonObjects\LearningInstancesList.cs" />
     <Compile Include="JsonObjects\LearningInstanceStats.cs" />
     <Compile Include="JsonUtils.cs" />
