--- a/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
+++ b/IQBotAPI/IQBotAPILibrary/IQBotAPILibrary.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IQBotCalls\DB\DBAPICalls.cs" />
     <Compile Include="IQBotCalls\Rest\600ReadRestAPICalls.cs" />
     <Compile Include="JsonObjects\AuthResponse.cs" />
+    <Compile Include="JsonObjects\GroupDefinition.cs" />
     <Compile Include="JsonObjects\GroupsList.cs" />
     <Compile Include="JsonObjects\LearningInstanceDetails.cs" />
     <Compile Include="JsonObjects\LearningInstancesList.cs" />
