--- a/IQBotAPI/Doctools_Calls/Doctools_Calls.csproj
+++ b/IQBotAPI/Doctools_Calls/Doctools_Calls.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB4ECA82-A274-4121-8EE8-1DACCA4CB8B7}</ProjectGuid>
+    <ProjectGuid>{53F0DC1E-9887-4F0C-A53B-6D5698B05BBD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IQBotAPILibrary</RootNamespace>
-    <AssemblyName>IQBotAPILibrary</AssemblyName>
+    <RootNamespace>Doctools_Calls</RootNamespace>
+    <AssemblyName>Doctools_Calls</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,37 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DoctoolsCalls\100DTRestCalls.cs" />
-    <Compile Include="FormUpload.cs" />
-    <Compile Include="IQBotCalls\DB\530ReadDBAPICalls.cs" />
-    <Compile Include="IQBotCalls\DB\600ReadDBAPICalls.cs" />
-    <Compile Include="IQBotCalls\DoctoolsConnectionBroker.cs" />
-    <Compile Include="IQBotCalls\Rest\530ReadRestAPICalls.cs" />
-    <Compile Include="IQBotCalls\DB\530WriteDBAPICalls.cs" />
-    <Compile Include="CRCalls\CRRestUtils.cs" />
-    <Compile Include="CRCalls\Resps\GenericJSONResponses.cs" />
-    <Compile Include="CRCalls\Rest\v11RestAPICalls.cs" />
-    <Compile Include="CRCalls\CRConnectionBroker.cs" />
-    <Compile Include="IQBotCalls\IQBotConnectionBroker.cs" />
-    <Compile Include="IQBotCalls\DB\DBAPICalls.cs" />
-    <Compile Include="IQBotCalls\Rest\600ReadRestAPICalls.cs" />
-    <Compile Include="JsonObjects\AuthResponse.cs" />
-    <Compile Include="JsonObjects\Doctools\PDFToText.cs" />
-    <Compile Include="JsonObjects\GroupDefinition.cs" />
-    <Compile Include="JsonObjects\GroupsList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceDetails.cs" />
-    <Compile Include="JsonObjects\LearningInstancesList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceFilesList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceStats.cs" />
-    <Compile Include="JsonUtils.cs" />
+    <Compile Include="_v100.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RestUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IQBotAPILibrary\IQBotAPILibrary.csproj">
+      <Project>{bb4eca82-a274-4121-8ee8-1dacca4cb8b7}</Project>
+      <Name>IQBotAPILibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CRCalls\DB\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
