--- a/IQBotAPI/IQBotAPILibrary/zAPILibraries.csproj
+++ b/IQBotAPI/IQBotAPILibrary/zAPILibraries.csproj
@@ -48,24 +48,24 @@
     <Compile Include="FormUpload.cs" />
     <Compile Include="IQBotCalls\DB\530ReadDBAPICalls.cs" />
     <Compile Include="IQBotCalls\DB\600ReadDBAPICalls.cs" />
-    <Compile Include="IQBotCalls\DoctoolsConnectionBroker.cs" />
+    <Compile Include="ConnectionBrokers\DoctoolsConnectionBroker.cs" />
     <Compile Include="IQBotCalls\Rest\530ReadRestAPICalls.cs" />
     <Compile Include="IQBotCalls\DB\530WriteDBAPICalls.cs" />
     <Compile Include="CRCalls\CRRestUtils.cs" />
     <Compile Include="CRCalls\Resps\GenericJSONResponses.cs" />
     <Compile Include="CRCalls\Rest\v11RestAPICalls.cs" />
-    <Compile Include="CRCalls\CRConnectionBroker.cs" />
-    <Compile Include="IQBotCalls\IQBotConnectionBroker.cs" />
+    <Compile Include="ConnectionBrokers\CRConnectionBroker.cs" />
+    <Compile Include="ConnectionBrokers\IQBotConnectionBroker.cs" />
     <Compile Include="IQBotCalls\DB\DBAPICalls.cs" />
     <Compile Include="IQBotCalls\Rest\600ReadRestAPICalls.cs" />
-    <Compile Include="JsonObjects\AuthResponse.cs" />
-    <Compile Include="JsonObjects\Doctools\PDFToText.cs" />
-    <Compile Include="JsonObjects\GroupDefinition.cs" />
-    <Compile Include="JsonObjects\GroupsList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceDetails.cs" />
-    <Compile Include="JsonObjects\LearningInstancesList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceFilesList.cs" />
-    <Compile Include="JsonObjects\LearningInstanceStats.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\AuthResponse.cs" />
+    <Compile Include="JsonResponseClasses\Doctools\PDFToText.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\GroupDefinition.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\GroupsList.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\LearningInstanceDetails.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\LearningInstancesList.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\LearningInstanceFilesList.cs" />
+    <Compile Include="JsonResponseClasses\IQBot\LearningInstanceStats.cs" />
     <Compile Include="JsonUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestUtils.cs" />
